# oxicodent

./: .gitignore  CASPER_II_PROMPT.md  CASPER_I_PROMPT.md  Cargo.toml  MELCHIOR_PROMPT.md  README.md  attention-separation.md  check.lua  coder-double-separation.md  mach.lua  magi_design.md  oxicodent-assistant.md  test.lua  三贤人_Design.md
prompt/: CASPER_II_PROMPT.md  CASPER_I_PROMPT.md  MELCHIOR_INIT_PROMPT.md  MELCHIOR_PROMPT.md
src/: api_client.rs  app.rs  config_manager.rs  event_handler.rs  executor.rs  io_thread.rs  main.rs  ui.rs  worker.rs  worker_thread.rs
