[package]
name = "oxicodent"
version = "0.4.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
home = "0.5.12"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
ratatui = "0.26" # 核心渲染
crossterm = "0.27" # 终端控制（原始模式、键盘事件）