[package]
name = "oxicodent"
version = "0.5.2"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
diffy = "0.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }